syntax = "proto3";

package order;

// Import user service types
import "UserService.proto";

// Order service definition
service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc GetUserOrders(GetUserOrdersRequest) returns (GetUserOrdersResponse);
}

// Messages for CreateOrder
message CreateOrderRequest {
  int32 user_id = 1;
  repeated OrderItem items = 2;
}

message CreateOrderResponse {
  bool success = 1;
  string message = 2;
  OrderWithUser order = 3;
}

// Messages for GetOrder
message GetOrderRequest {
  int32 order_id = 1;
}

message GetOrderResponse {
  bool success = 1;
  string message = 2;
  OrderWithUser order = 3;
}

// Messages for GetUserOrders
message GetUserOrdersRequest {
  int32 user_id = 1;
}

message GetUserOrdersResponse {
  bool success = 1;
  string message = 2;
  repeated OrderWithUser orders = 3;
}

// Order models
message Order {
  int32 id = 1;
  int32 user_id = 2;
  repeated OrderItem items = 3;
  double total_amount = 4;
  string status = 5;
  int64 created_at = 6;
}

message OrderItem {
  string product_name = 1;
  int32 quantity = 2;
  double price = 3;
}

// Combined order with user info (for responses)
message OrderWithUser {
  Order order = 1;
  user.User user = 2;
}